--- a/www/index.css
+++ b/www/index.css
@@ -15,3 +15,13 @@
 img {
   width: 100%;
 }
+
+#mapping {
+  white-space: pre-line;
+  opacity: 0;
+  transition: opacity 2s ease-in-out .5s;
+}
+
+#mapping:hover {
+  opacity: 1;
+}
