Implement random button mapping

--- a/www/index.css
+++ b/www/index.css
@@ -19,7 +19,7 @@ img {
 #mapping {
   white-space: pre-line;
   opacity: 0;
-  transition: opacity 2s ease-in-out .5s;
+  transition: opacity 2s ease-in-out 0.5s;
 }
 
 #mapping:hover {
